2004-02-04  Jorn Baayen  <jbaayen@gnome.org>

	* README:

	Added FLAC dependency.
	
	* src/Album.cs:

	Remove unused Year field.
	
	* src/Song.cs:

	g_free strings we get from the DB.

2004-02-03  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:

	Initialize nothing_pixbuf before connecting to the database signals.

2004-02-03  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Released 0.3.2.
	
	* TODO:
	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	First stab at implementing proper file watching, but it is commented
	out for now because I ran into a mono bug. Details in TODO.

2004-02-03  Jorn Baayen  <jbaayen@gnome.org>

	* AUTHORS:
	* MAINTAINERS:
	* src/About.cs:
	* src/PlaylistWindow.cs:

	Fix assertions on empty playlist, change my email address.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/images/muine-default-cover.png:
	* src/CoverDatabase.cs:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:
	* src/StockIcons.cs:

	Use stock icon system whenever possible.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* src/CoverDatabase.cs:
	* src/GnomeProxy.cs:
	* src/Makefile.am:

	Use Gnome proxy settings.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* data/glade/PlaylistWindow.glade:

	Fix dup accel.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* TODO:
	* data/glade/PlaylistWindow.glade:
	* data/muine.schemas.in:
	* libmuine/pointer-list-model.c: (pointer_list_model_last):
	* libmuine/pointer-list-model.h:
	* libmuine/pointer-list-view.c: (pointer_list_view_last):
	* libmuine/pointer-list-view.h:
	* src/HandleView.cs:
	* src/PlaylistWindow.cs:

	Add a repeat mode.

2004-02-02  Jorn Baayen  <jorn@nl.linux.org>

	* src/Song.cs:

	Nullify tmp_cover_image when not needed anymore.

2004-02-02  Goetz Waschk  <waschk@informatik.uni-rostock.de>

	* data/muine.schemas.in:

	An empty string list should be stored as []

2004-02-01  Jorn Baayen  <jorn@nl.linux.org>

	* src/PlaylistWindow.cs:
