@@ -79,8 +79,3 @@ o Drag images from Nautilus or Epiphany to the album cover area in
 o Make title and artist label one for easier selection.
   We need a proper Gtk ellipsizing widget for this.
 o Use storage
-
-Current problems:
-=================
-
-o Hard to find music to play, only works when you know what you want.
