@@ -1,3 +1,10 @@
+2004-02-05  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/PlaylistWindow.cs:
+
+	Include playlist duration in playlist duration label when in repeat
+	mode.
+
 2004-02-04  Jorn Baayen  <jbaayen@gnome.org>
 
 	* README:
